# taurino-webview

./: .gitignore  Cargo.toml  README.md  m.txt
examples/: simple.rs
scripts/: core.js  init.js  ipc-protocol.js  ipc.js  pattern.js
src/: async_runtime.rs  attributes.rs  builder.rs  error.rs  events.rs  factory.rs  image.rs  layout.rs  lib.rs  main.rs  manager.rs  pattern.rs  pending.rs  protocol.rs  types.rs  utils.rs  webview.rs  wrapper.rs
src/platform/: mod.rs  undecorated_resizing.rs  util.rs  webview.rs
src/platform/dialog/: mod.rs  windows.rs
src/platform/monitor/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/window/: linux.rs  macos.rs  mod.rs  windows.rs
src/protocol/: ipc.rs  isolation.rs  mod.rs  pattern.rs  taurino.rs
src/utils/: error.rs  mod.rs  types.rs  wrapper.rs
src/webview/: attributes.rs  builder.rs  factory.rs  layout.rs  mod.rs  pending.rs  webview.rs
src/webview/scripts/: drag.js  freeze_prototype.js  ipc.js  isolation.js  print.js  process-ipc-message-fn.js  toggle-devtools.js  zoom-hotkey.js
src/window/: builder.rs  factory.rs  mod.rs  wrapper.rs
