[package]
name = "taurino-webview"
version = "0.1.0"
edition = "2024"
exclude = ["/target", "/examples"]
readme = "README.md"

[dependencies]
serialize-to-javascript = { version = "0.1.2", optional = true }
schemars = { version = "0.8.21", features = ["url", "uuid1"], optional = true }
serde_with = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
glob = "0.3.1"
urlpattern = "0.3"
regex = "1"
tracing = { version = "0.1", optional = true }
log = "0.4.21"

wry = { version = "0.55.0", default-features = false, features = [
  "protocol",
  "os-webview",
  "linux-body",
] }
tao = { version = "0.35.0", default-features = false, features = ["rwh_06"] }
raw-window-handle = { version = "0.6", features = ["std"] }
http = "1.1"
url = { version = "2", features = ["serde"] }
dpi = { version = "0.1", features = ["serde"] }

# WARNING: cookie::Cookie is re-exported so bumping this is a breaking change.
cookie = "0.18"
sha2 = "0.10"
base64 = "0.22"
proc-macro2 = "1"
quote = "1"
syn = "2"
ico = "0.5"
png = "0.17"
walkdir = "2"
brotli = { version = "8", optional = true, default-features = false, features = [
  "std",
] }
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1.8.5"
mime_guess = "2.0.5"
mime = "0.3.17"
data-url = "0.3.2"
infer = "0.19.0"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
  "io-util",
] }
percent-encoding = "2"


[target."cfg(windows)".dependencies]
webview2-com = "0.38"
softbuffer = { version = "0.4", default-features = false }
once_cell = "1.20"

[target."cfg(windows)".dependencies.windows]
version = "0.61"
features = ["Win32_Foundation", "Win32_Graphics_Dwm"]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
webkit2gtk = { version = "=2.0", features = ["v2_40"] }
percent-encoding = "2"

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "block2",
  "NSApplication",
  "NSResponder",
  "NSView",
  "NSWindow",
  "NSScreen",
  "NSGraphics",
] }

[target."cfg(target_os = \"android\")".dependencies]
jni = "0.21"






[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-linux-android",
  "x86_64-apple-ios",
]
[features]
default = ["x11"]

schema = ["schemars"]

devtools = ["wry/devtools"]
x11 = ["wry/x11"]

macos-private-api = [
  "wry/fullscreen",
  "wry/transparent",
]

objc-exception = []

tracing = ["dep:tracing", "wry/tracing"]
macos-proxy = ["wry/mac-proxy"]

unstable = []
common-controls-v6 = []
webview-data-url = []
full = [
  "webview-data-url",
  "schema",
  "serialize-to-javascript",
  "devtools",
  "tracing",
  "macos-proxy",
  "unstable",
  "common-controls-v6",
]
